<resources>
    <string name="app_name">BookLibrary</string>
    <string name="contentdescription_sort_settings">Sort settings</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="all">All</string>
    <string name="add_book">Add book</string>
    <string name="book_cover">Book cover</string>
    <string name="app_label">app labels</string>
    <string name="search_hint">find book</string>
    <string name="action_search">action_search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="show">Show</string>
    <string name="search_result_is_empty">Books not found</string>
    <string name="search_book_hint">Search book</string>
    <string name="search">Search</string>
</resources>