<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_book_sort"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_light"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="Sort by"/>
        <RadioGroup
            android:id="@+id/booksort_group_sort_by_title_or_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/booksort_radiobutton_sort_by_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="Title"
                />
            <RadioButton
                android:id="@+id/booksort_radiobutton_sort_by_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Author"/>
        </RadioGroup>
        <ImageButton
            android:id="@+id/booksort_button_show_advanced_options"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_align_horizontal_right_24"
            android:backgroundTint="@android:color/holo_orange_light"
            android:contentDescription="@string/contentdescription_sort_settings" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/booksort_group_read_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="gone">
        <RadioButton
            android:id="@+id/booksort_button_read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/read"/>
        <RadioButton
            android:id="@+id/booksort_button_unread"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/unread"/>
        <RadioButton
            android:id="@+id/booksort_button_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/all"
            android:checked="true"/>
    </RadioGroup>
</LinearLayout>